--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ mypy = "^1.16.0"
 black = "^25.1.0"
 isort = "^6.0.1"
 flake8 = "^7.2.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
+
 [tool.mypy]
 disallow_untyped_defs = true
 no_implicit_optional = true
