--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ flake8 = "^7.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
+pytest-cov = "^6.2.1"
 
 [tool.mypy]
 disallow_untyped_defs = true
